--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "MahdiIDea\\SmsIrLaravel\\SmsIrServiceProvider"
+        "MahdiIDea\\SmsIrLaravel6\\SmsIrServiceProvider"
       ]
     }
   }
